--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="question1_textView">Insert Question 1 Text Here</string>
+    <string name="question2_textView">Insert Question 2 Text Here</string>
+    <string name="question3_textView">Insert Question 3 Text Here</string>
+    <string name="question4_textView">Insert Question 4 Text Here</string>
+    <string name="instructions_textView">Insert Quiz Instructions Here</string>
 </resources>
