Correct question 4 logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
     <string name="question3_option3_text">Insert Q3 O3 Text Here</string>
     <string name="question3_option4_text">Insert Q3 O4 Text Here</string>
     <string name="enter_answer_here">Enter answer here</string>
-    <string name="question4_keyWord">Insert Q4 Keyword Here</string>
+    <string name="question4_keyWord">alias</string>
 </resources>
