--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <resources>
     <string name="app_name">Quiz App</string>
-    <string name="question1_textView">Insert Question 1 Text Here</string>
-    <string name="question2_textView">Insert Question 2 Text Here</string>
-    <string name="question3_textView">Insert Question 3 Text Here</string>
-    <string name="question4_textView">Insert Question 4 Text Here</string>
-    <string name="instructions_textView">Insert Quiz Instructions Here</string>
+    <string name="question1_textView">What are the attributes of standard CD audio files? (check all that apply)</string>
+    <string name="question2_textView">What is the most noticable difference between different mp3 bandwidth settings?</string>
+    <string name="question3_textView">When should you convert from uncompressed audio to mp3?</string>
+    <string name="question4_textView">Describe what happens when your analog low-pass filters have failed on your analog-to-digital convertors.</string>
+    <string name="instructions_textView">This short quiz tests your knowledge of basic digital audio principles. Good luck!</string>
     <string name="button_text">Submit Answers</string>
-    <string name="question1_option1_text">Insert Q1 O1 Text Here</string>
-    <string name="question1_option2_text">Insert Q1 O2 Text Here</string>
-    <string name="question1_option3_text">Insert Q1 O3 Text Here</string>
-    <string name="question1_option4_text">Insert Q1 O4 Text Here</string>
-    <string name="question2_option1_text">Insert Q2 O1 Text Here</string>
-    <string name="question2_option2_text">Insert Q2 O2 Text Here</string>
-    <string name="question2_option3_text">Insert Q2 O3 Text Here</string>
-    <string name="question2_option4_text">Insert Q2 O4 Text Here</string>
-    <string name="question3_option1_text">Insert Q3 O1 Text Here</string>
-    <string name="question3_option2_text">Insert Q3 O2 Text Here</string>
-    <string name="question3_option3_text">Insert Q3 O3 Text Here</string>
-    <string name="question3_option4_text">Insert Q3 O4 Text Here</string>
+    <string name="question1_option1_text">16 bit dynamic range</string>
+    <string name="question1_option2_text">44.1 Hz sample rate</string>
+    <string name="question1_option3_text">96 dB signal-to-noise ratio</string>
+    <string name="question1_option4_text">128 kbps bandwidth</string>
+    <string name="question2_option1_text">Lower bandwidth correlates to a higher quantization noise level</string>
+    <string name="question2_option2_text">Lower bandwidth correlates to a lower low-pass frequency knee</string>
+    <string name="question2_option3_text">Lower bandwidth correlates to higher aliasing</string>
+    <string name="question2_option4_text">Lower bandwidth correlates to a lower signal-to-noise ratio</string>
+    <string name="question3_option1_text">It should be the very last stage of processing</string>
+    <string name="question3_option2_text">After editing, but before any signal processing</string>
+    <string name="question3_option3_text">Immediately after recording</string>
+    <string name="question3_option4_text">After all other processing, but before applying dither</string>
     <string name="enter_answer_here">Enter answer here</string>
     <string name="question4_keyWord">alias</string>
 </resources>
